# graphrag-yelp

./: .env.example  .gitignore  Makefile  README.md  contex.cursorules  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
api/: __init__.py  main.py
api/routers/: chat.py  graph.py  metrics.py  stats.py  temporal.py
docs/: DOCKER_AND_NEO4J_BASICS.md  STUDENT_SETUP_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DashboardCards.tsx  GraphCanvas.tsx  TemporalSlider.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useStore.ts
frontend/src/types/: react-cytoscapejs.d.ts
graphrag/: __init__.py  cypher_chain.py  prompts.py  retriever.py  schema.py
pipeline/: __init__.py  config.py  hypothesis_tests.py  ingest.py  load_neo4j.py  metrics.py  network.py  run.py  temporal.py
ref/: Restaurant Hype Networks.docx  Restaurant_Hype_GraphRAG_Build_Plan.docx  yelp_eda_philly (1).ipynb
tests/: __init__.py  test_ingest.py
